kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: health-sc
spec:
  selector:
      app: docker-health
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: NodePort
